将Math.clamp替换为原来的写法